<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePage2Activity">

    <Button
        android:id="@+id/btn_3start"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="#2F5233"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:backgroundTint="#2F5233"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_3questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prog_3bar"
        app:strokeColor="@color/black"
        app:strokeWidth="10dp" />

    <ProgressBar
        android:id="@+id/prog_3bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="20"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_3timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"


        android:layout_marginLeft="8dp"
        android:text="@string/tv_timer"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prog_3bar" />

    <TextView
        android:id="@+id/tv_3score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_score"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog_3bar" />

    <TextView
        android:id="@+id/tv_3questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text="@string/tv_questions"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog_3bar"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_3questions"

        app:layout_constraintEnd_toEndOf="@+id/tv_3questions"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prog_3bar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_2answer0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="250dp"
                android:background="#8BCD50"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:backgroundTint="#8BCD50" />

            <Button
                android:id="@+id/btn_3answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="250dp"
                android:background="#DED93E"
                android:scrollbarSize="0dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:backgroundTint="#DED93E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_3answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="250dp"
                android:background="#1D741B"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:backgroundTint="#1D741B" />

            <Button
                android:id="@+id/btn_3answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="250dp"
                android:background="#8FA01F"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:backgroundTint="#8FA01F" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_3bottommsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bottommsg"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_3score"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog_3bar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btn_3exit3"
        android:layout_width="65dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/background" />


    <TextView
        android:id="@+id/tv_timeleft2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/secs_left"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_3timer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_correct_total2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/correct_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_3bottommsg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_scoreinfo2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/total_score"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_3score"
        app:layout_constraintVertical_bias="0.047" />

</androidx.constraintlayout.widget.ConstraintLayout>