<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/settings_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_screen_background_thin"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/box_shape1"
        android:text="@string/about_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_view"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/btn_rate"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/box_shape1"
        android:text="@string/rate_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_view"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/btn_sound"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/box_shape1"
        android:text="@string/sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_view"
        app:layout_constraintVertical_bias="0.446" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_rights_reserved_version_1_july_2021"
        app:layout_constraintBottom_toBottomOf="@+id/settings_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rate"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/btn_3exit3"
        android:layout_width="61dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="136dp"
        android:layout_height="136dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rate"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cute_monster"
        tools:ignore="MissingClass" />

</androidx.constraintlayout.widget.ConstraintLayout>